--- a/main.html
+++ b/main.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <title>Image Downloader</title>
   </head>
-
   <body>
-    <!-- the entire body must be written by student -->
+    <!-- Loading Spinner -->
+    <div id="loading">Loading...</div>
+
+    <!-- Error Message -->
+    <div id="error"></div>
+
+    <!-- Output Container for Images -->
     <div id="output"></div>
+
+    <!-- JavaScript File -->
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
